# carbon_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  string.cpp  string.cppm  types.cppm
src/math/: CMakeLists.txt  algebra.cpp  algebra.cppm  align.cppm  comparison.cppm  concepts.cppm  constants.cppm  vec2.cppm
